# migrate

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE.txt  README.md  migrations.py  pyproject.toml  requirements.txt
examples/: Dockerfile  docker-compose.yml  migrations.py
src/edwh_migrate/: __about__.py  __init__.py  constants.py  helpers.py  migrate.py  postgres.py  view_migration_manager.py
tests/: __init__.py  fixtures.py  test_basics.py  test_cascading_dependencies.py  test_import_migrations.py  test_postgres.py  test_redis.py  test_typedal.py  test_viewmigrationsmanager.py
tests/sqlite_empty/: empty_sqlite.db  just_implemented_features.db  just_implemented_features.psql.sql  just_implemented_features.sql
